adição da temperatura em CPU

--- a/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
@@ -1,12 +1,24 @@
 <div class="dash-rows um">
     <div class="dash-cards left">
         <label>CPU</label>
-            <p>Ideal</p><input type="number"> 
-            <p>Atenção</p> <input type="number">
-            <p>Crítico </p><input type="number">
+        <div class="cpu">
+        <div>
+            <h5>USO</h5>
+                <p>Ideal</p><input type="number">
+                <p>Atenção</p> <input type="number">
+                <p>Crítico </p><input type="number">
+        </div>
+        <div>
+            <h5>TEMPERATURA</h5>
+                <p>Ideal</p><input type="number">
+                <p>Atenção</p> <input type="number">
+                <p>Crítico </p><input type="number">
+        </div>
+        </div>
     </div>
     <div class="dash-cards">
         <label>DISCO</label>
+        <h5>USO</h5>
         <p>Ideal</p><input type="number"> 
         <p>Atenção</p> <input type="number">
         <p>Crítico </p><input type="number">
@@ -15,6 +27,7 @@
 <div class="dash-rows">
     <div class="dash-cards left">
         <label>RAM</label>
+        <h5>USO</h5>
         <p>Ideal</p><input type="number"> 
         <p>Atenção</p> <input type="number">
         <p>Crítico </p><input type="number">
