fix alterar dados

--- a/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
@@ -3,33 +3,33 @@
         <label>CPU</label>
         <div class="cpu">
         <div>
-            <h5>USO</h5>
+            <h4>USO</h4>
                 <p>Ideal</p><input type="number">
-                <p>Atenção</p> <input type="number">
+                <p>Moderado</p> <input type="number">
                 <p>Crítico </p><input type="number">
         </div>
         <div>
-            <h5>TEMPERATURA</h5>
+            <h4>TEMPERATURA</h4>
                 <p>Ideal</p><input type="number">
-                <p>Atenção</p> <input type="number">
+                <p>Moderado</p> <input type="number">
                 <p>Crítico </p><input type="number">
         </div>
         </div>
     </div>
     <div class="dash-cards">
         <label>DISCO</label>
-        <h5>USO</h5>
+        <h4>USO</h4>
         <p>Ideal</p><input type="number"> 
-        <p>Atenção</p> <input type="number">
+        <p>Moderado</p> <input type="number">
         <p>Crítico </p><input type="number">
     </div>
 </div>
 <div class="dash-rows">
     <div class="dash-cards left">
         <label>RAM</label>
-        <h5>USO</h5>
+        <h4>USO</h4>
         <p>Ideal</p><input type="number"> 
-        <p>Atenção</p> <input type="number">
+        <p>Moderado</p> <input type="number">
         <p>Crítico </p><input type="number">
     </div>
     <div class="dash-cards">
