--- a/client-side/src/app/components/arf-login/arf-login.component.scss
+++ b/client-side/src/app/components/arf-login/arf-login.component.scss
@@ -52,7 +52,7 @@ section {
 	color: rgb(88, 88, 88);
 }
 .btnLogar {
-	margin-top: 6%;
+	margin-top: 4%;
 	height: 6vh;
 	background-color: var(--azul-claro);
 	border: 0;
@@ -90,4 +90,8 @@ section {
 .container a {
 	text-decoration: none;
 	color: rgb(0, 140, 255);
+}
+.error{
+  color:red;
+  margin-top: 15px;
 }
