--- a/client-side/src/app/components/arf-cadastro/arf-cadastro.component.html
+++ b/client-side/src/app/components/arf-cadastro/arf-cadastro.component.html
@@ -21,9 +21,9 @@
       <p>Email</p>
       <input type="text" [(ngModel)]="email"/>
       <p>Ramal</p>
-      <input type="text" [(ngModel)]="ramal" />
+      <input type="text" [(ngModel)]="telefone" />
       <p>Função</p>
-      <select>
+      <select [(ngModel)]="funcao">
         <option value="pm">PM</option>
         <option value="qa">QA</option>
         <option value="po">PO</option>
@@ -36,7 +36,7 @@
         <option value="pm">Estágiario</option>
       </select>
       <p>Departamento</p>
-      <select>
+      <select [(ngModel)]="departamento">
         <option [value]="nome" *ngFor="let nome of departamentos">{{nome}}</option>
       </select>
       <p>Senha</p>
