--- a/client-side/src/app/components/arf-cadastro/arf-cadastro.component.scss
+++ b/client-side/src/app/components/arf-cadastro/arf-cadastro.component.scss
@@ -36,7 +36,7 @@ section {
 .container p {
 	padding: 3px;
 }
-.container input {
+.container input, select {
 	height: 3.6vh;
 	padding: 5px;
 	border-radius: 5px;
