--- a/client-side/src/app/components/arf-cadastro/arf-cadastro.component.html
+++ b/client-side/src/app/components/arf-cadastro/arf-cadastro.component.html
@@ -17,11 +17,11 @@
         </h1>
       </div>
       <p>Nome</p>
-      <input type="text" [(ngModel)]="nome" />
+      <input type="text" [(ngModel)]="nome" placeholder="Seu Nome"/>
       <p>Email</p>
-      <input type="text" [(ngModel)]="email"/>
-      <p>Ramal</p>
-      <input type="text" [(ngModel)]="telefone" />
+      <input type="text" [(ngModel)]="email" placeholder="seuemail@dominio.com"/>
+      <p>Telefone</p>
+      <input type="text" [(ngModel)]="telefone" placeholder="xxxxxxxxxxx"/>
       <p>Função</p>
       <select [(ngModel)]="funcao">
         <option value="pm">PM</option>
