--- a/client-side/src/app/components/arf-cadastro/arf-cadastro.component.scss
+++ b/client-side/src/app/components/arf-cadastro/arf-cadastro.component.scss
@@ -77,6 +77,7 @@ section {
 .footerLogin {
 	display: flex;
 	width: 60vw;
+  font-size: 13px;
 	flex-direction: row;
 	justify-content: space-around;
 	position: absolute;
