feat: mudanças no estilo

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
@@ -1,9 +1,17 @@
 <arf-dash-card card="chart" title="Departamentos" titleIcon="assets/icones/departamentos_icon.svg"
   class="arf-dash-card">
-  <!-- Filters -->
-  <arf-filters [chartRealTime]="chartRealTime" (atualizarFiltros)="filterData = $event" class="arf-filters"
-    card="chart">
-  </arf-filters>
+
+  <section class="filtros">
+    <!-- Legends -->
+    <arf-legend class="arf-filters" *ngIf="filterData" [componentesSelecionados]="filterData.componentesSelecionados"
+      [departamentosSelecionados]="filterData.departamentosSelecionados" [chartRealTime]="chartRealTime">
+    </arf-legend>
+
+    <!-- Filters -->
+    <arf-filters [chartRealTime]="chartRealTime" (atualizarFiltros)="filterData = $event" class="arf-filters"
+      card="chart">
+    </arf-filters>
+  </section>
 
   <!-- Chart -->
   <section *ngIf="filterData" class="chart-container">
