--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.html
@@ -25,17 +25,21 @@
         <h3 class="kpi-card-title">{{kpi.title}} (%)</h3>
         <p class="kpi-card-number">{{kpi.label}}</p>
         <label class="kpi-card-description">
-          Aumentou <span [ngStyle]="{color: caretColor}"> 9% <i [ngClass]="caretIcon"></i></span>
+          Aumentou <span class="stats" [ngStyle]="{color: caretColor}"> 9% <i [ngClass]="caretIcon"></i></span>
           <br>
           sobre o mês anterior
         </label>
       </div>
     </div>
 
-    <div class="canvas">
+    <div class="canvas-container">
+      <p for="">Distribuição de componentes com má performance</p>
+
       <!-- Chart -->
-      <canvas baseChart [data]="chartData" [options]="chartOptions" type="pie">
-      </canvas>
+      <div class="canvas">
+        <canvas baseChart [data]="chartData" [options]="chartOptions" type="pie">
+        </canvas>
+      </div>
     </div>
   </section>
 </arf-dash-card>
