--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.scss
@@ -1,3 +1,7 @@
+.filtros {
+  display: flex;
+}
+
 .arf-filters {
   padding: 5px 0 2px;
   margin-bottom: 10px;
@@ -32,25 +36,4 @@
       font-weight: 900;
     }
   }
-}
-
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background-color: #ededed;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background-color: var(--azul-safra);
-  border-radius: 5px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--azul-safra);
 }
