--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.scss
@@ -29,22 +29,6 @@
     }
 
   }
-
-  #hoje-btn,
-  .hoje-btn {
-    background: rgba(30, 32, 68, 0.8);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    color: #fff;
-    // padding: 3px;
-    cursor: pointer;
-    height: fit-content;
-    align-self: flex-end;
-
-    &-on {
-      background: #1E2044 !important;
-    }
-  }
 }
 
 
@@ -54,6 +38,8 @@
   justify-content: center;
   align-items: center;
   row-gap: 10px;
+  height: 100%;
+  padding: 0 5px 5px;
 
   .kpi-cards-container {
     display: flex;
@@ -61,12 +47,12 @@
     justify-content: center;
     gap: 10px;
     height: 100%;
+    width: 100%;
     padding-top: 10px;
 
     .kpi-card {
-      width: 45%;
+      width: 48%;
       border-radius: 10px;
-      box-shadow: 0 0 2px 1px #000;
       padding: 5px 0;
       text-align: center;
       display: flex;
@@ -74,33 +60,73 @@
       justify-content: center;
       flex-direction: column;
       row-gap: 10px;
+      color: #fff;
+      background-color: #212121;
+      // background-color: var(--azul-safra);
+      box-shadow: 0 0 2px 1px #000;
 
       &-title {
         font-size: .85rem;
         letter-spacing: .5px;
+        letter-spacing: 1px;
+        text-shadow: 3px 3px #000;
       }
 
       &-number {
         font-size: 1rem;
+        font-weight: 500;
         border-radius: 50%;
-        border: 1px solid #000;
         width: 48px;
         height: 48px;
         display: flex;
         align-items: center;
         justify-content: center;
         align-self: center;
-        box-shadow: 0 0 3px 2px #000;
+        background-color: #fff;
+        box-shadow: 0 0 1px 3px #000;
+        color: #000;
       }
 
       &-description {
+        letter-spacing: .5px;
         font-size: .8rem;
+
+        .stats {
+          font-weight: 1000;
+          font-size: .9rem;
+        }
       }
+
     }
+
   }
 
-  .canvas {
-    width: 90%;
+  .canvas-container {
+    width: 100%;
     height: 100%;
+    border-radius: 10px;
+    align-self: flex-end;
+    box-shadow: 0 0 2px 0px #000;
+    background-color: #212121;
+    background-color: #ededed;
+    padding: 5px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    p {
+      text-align: center;
+      padding: 0 10px;
+      border-bottom: 1px solid #000;
+      font-weight: 700;
+      width: 85%;
+      letter-spacing: 1px;
+      border-radius: 10px;
+    }
+
+    .canvas {
+      width: 100%;
+    }
   }
 }
