--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-page.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-page.component.scss
@@ -5,7 +5,7 @@ $dash-charts-witdh: 72%;
 .dashboard {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to right, #1e2044, #1e2044f5);
+  background-color: #000;
   display: flex;
   align-items: center;
   justify-content: center;
