--- a/client-side/src/styles.scss
+++ b/client-side/src/styles.scss
@@ -19,3 +19,25 @@
 li {
   list-style-type: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #ededed;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: var(--azul-safra);
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--azul-safra);
+}
