feat: terminei a lista (acho)

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
@@ -1,4 +1,4 @@
-<arf-dash-card card="chart" title="Departamentos" titleIcon="assets/icones/departamentos_icon.svg"
+<arf-dash-card *ngIf="false" card="chart" title="Departamentos" titleIcon="assets/icones/departamentos_icon.svg"
   class="arf-dash-card">
 
   <section class="filtros">
