--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.html
@@ -1,4 +1,4 @@
-<table *ngIf="usersData">
+<table *ngIf="userDataFiltered">
   <tr class="head-rows">
     <th (click)="alternarOrdem('iconRef' + i, userFilter)" *ngFor="let userFilter of userFilters; let i = index">
       <div *ngIf="i == 0; else genericFilter">
@@ -16,7 +16,7 @@
     </th>
   </tr>
   <tr *ngFor="let userData of userDataFiltered" class="body-rows">
-    <td (click)="userData.isPinned = !userData.isPinned; pesquisa()">
+    <td (click)="togglePin(userData.id_pc); pesquisa(); filtrarLista()">
       <i class="pin-icon fa-solid fa-thumbtack"
         [ngClass]="{'pinned': userData.isPinned, 'notPinned': !userData.isPinned}">
       </i>
@@ -36,33 +36,36 @@
     <td>
       {{ date }}
     </td>
-    <td
-      [ngStyle]="{'backgroundColor':
-    gerarStatus(userData.cpu, true, userData.cpu.temperatura, userData.cpu.alertaCriticoTemperatura, componentes.cpu.checked)}">
+    <td [ngStyle]="{'backgroundColor':
+    gerarStatus(userData.cpu.temperatura, userData.cpu.alertaCriticoTemperatura, componentes.cpu.checked)}">
       {{ componentes.cpu.checked && userData.cpu.temperatura ?
-      (userData.cpu.temperatura) + 'ºC' : 'N/D' }}
+      (userData.cpu.temperatura).toFixed(1) + 'ºC' : 'N/D' }}
     </td>
     <td [ngStyle]="{'backgroundColor':
-    gerarStatus(userData.cpu, false, userData.cpu.uso, userData.cpu.alertaCriticoUso,componentes.cpu.checked)}">
+    gerarStatus(userData.cpu.uso, userData.cpu.alertaCriticoUso,componentes.cpu.checked)}">
       {{ componentes.cpu.checked && userData.cpu.uso ? (userData.cpu.uso).toFixed(1) + '%' : 'N/D'}}
     </td>
     <td [ngStyle]="{'backgroundColor':
-    gerarStatus(userData.ram, false, userData.ram.uso, userData.ram.alertaCriticoUso ,componentes.ram.checked)}">
+    gerarStatus(userData.ram.uso, userData.ram.alertaCriticoUso ,componentes.ram.checked)}">
       {{ componentes.ram.checked && userData.ram.uso? (userData.ram.uso).toFixed(1) + '%' : 'N/D' }}
     </td>
     <td [ngStyle]="{'backgroundColor':
-    gerarStatus(userData.hdd, false, userData.hdd.uso, userData.hdd.alertaCriticoUso , componentes.hdd.checked)}">
+    gerarStatus(userData.hdd.uso, userData.hdd.alertaCriticoUso , componentes.hdd.checked)}">
       {{ componentes.hdd.checked && userData.hdd.uso? (userData.hdd.uso).toFixed(1) + '%' : 'N/D' }}
     </td>
   </tr>
 
   <p class="text-centered"
-    *ngIf="userDataFiltered && userDataFiltered.length == 0 && departamentosSelecionados.length != 0">
+    *ngIf="userDataFiltered && userDataFiltered.length == 0 && departamentosSelecionados.length != 0 && dataFinded">
     Nenhum item encontrado!
   </p>
 
+  <p class="text-centered" *ngIf="!dataFinded">
+    Nenhum dado encontrado!
+  </p>
+
   <p class="text-centered"
-    *ngIf="departamentosSelecionados && departamentosSelecionados.length == 0 && userDataFiltered.length == 0">
+    *ngIf="departamentosSelecionados && departamentosSelecionados.length == 0 && userDataFiltered.length == 0 && dataFinded">
     Nenhum departamento selecionado!
   </p>
 
