feat: Todo o front conectado

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.html
@@ -1,22 +1,21 @@
-<arf-dash-card *ngIf="false" card="chart" title="Departamentos" titleIcon="assets/icones/departamentos_icon.svg"
+<arf-dash-card card="chart" title="Departamentos" titleIcon="assets/icones/departamentos_icon.svg"
   class="arf-dash-card">
 
   <section class="filtros">
     <!-- Legends -->
-    <arf-legend class="arf-filters" *ngIf="filterData" [componentesSelecionados]="filterData.componentesSelecionados"
+    <arf-legend class="arf-legends" *ngIf="filterData" [componentesSelecionados]="filterData.componentesSelecionados"
       [departamentosSelecionados]="filterData.departamentosSelecionados" [chartRealTime]="chartRealTime">
     </arf-legend>
 
     <!-- Filters -->
-    <arf-filters [chartRealTime]="chartRealTime" (atualizarFiltros)="filterData = $event" class="arf-filters"
-      card="chart">
+    <arf-filters (atualizarFiltros)="filterData = $event" class="arf-filters" card="chart">
     </arf-filters>
   </section>
 
   <!-- Chart -->
   <section *ngIf="filterData" class="chart-container">
     <arf-chart [ngStyle]="{'align-self': filterData.departamentosSelecionados.length == 0 ? 'center' : 'flex-start' }"
-      [chartRealTime]="chartRealTime" [filterData]="filterData">
+      [filterData]="filterData">
     </arf-chart>
   </section>
 </arf-dash-card>
