--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-chart/arf-dashboard-chart.component.scss
@@ -2,7 +2,8 @@
   display: flex;
 }
 
-.arf-filters {
+.arf-filters,
+.arf-legends {
   padding: 5px 0 2px;
   margin-bottom: 10px;
   margin-left: 40px;
