--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-chart/arf-chart.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-chart/arf-chart.component.scss
@@ -66,3 +66,11 @@
   margin: 5px 0;
   font-size: .9rem;
 }
+
+.text-centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.1rem;
+}
