--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-legend/arf-legend.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-legend/arf-legend.component.html
@@ -1,6 +1,6 @@
 <!-- Legend -->
 <ul class="chart-legends">
-  <ng-container *ngIf="chartRealTime; else barLegends">
+  <ng-container *ngIf="chartType == 'line'; else barLegends">
     <li *ngFor="let dep of departamentosSelecionados; let i = index" class="legends">
       <span [ngStyle]="{'background-color': dep.cor}" class="legends-box"></span>
       <p class="legends-label">{{dep.nome}}</p>
