--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-filters/arf-filters.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-filters/arf-filters.component.html
@@ -77,5 +77,5 @@
 
   <!-- Buscar -->
   <button [disabled]="btnDisabled" [ngClass]="{'btnDisabled': btnDisabled}"
-    (click)="dashServices.buscarEvent.emit(chartRealTime); btnDisabled = true" class="buscar-btn">Buscar</button>
+    (click)="dashServices.buscarEvent.emit({chartRealTime: chartRealTime, card: card}); btnDisabled = true" class="buscar-btn">Buscar</button>
 </ul>
