feat: Serviço de iamgem do usuario

--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+
+<!-- Exemplo de profile pics -->
+<!-- <input #imgRef type="file">
+<button (click)="enviarImage()">enviar!</button>
+<img [src]="profileImg" alt=""> -->
