feat: start da tela

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -3,6 +3,7 @@
   <div class="oversight-navbar"></div>
 
   <div class="outlet">
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
+    <arf-alertas></arf-alertas>
   </div>
 </section>
