feat: botão de zerar

--- a/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
@@ -59,6 +59,7 @@
         <button [id]="'btnApply' + data.idPC" disabled
           (click)="applyChanges(data.idPC, tempCPUref, usoCPUref, usoRAMref)">Aplicar</button>
         <button disabled [id]="'btnReset' + data.idPC" (click)="resetChanges(data.idPC)">Resetar</button>
+        <button (click)="zerar(data.idPC)">Zerar</button>
       </td>
     </tr>
   </table>
