--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
@@ -1,67 +1,99 @@
-*{
-    display: flex;
-    flex-direction: column;
+* {
+  display: flex;
+  flex-direction: column;
 
 }
 
-.logo{
-    width: 50%;
-    margin: 20px auto 0;
+:host {
+  height: 100vh;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding-top: 15px;
+  position: relative;
 }
-.title{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 19px;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.05em;
-    margin: auto;
-    color: #D4AD68;
 
-    mix-blend-mode: normal;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.logo {
+  width: 38%;
 }
-p,span{
-    margin: auto;
-    align-items: center;
-    text-align: center;
-    font-family: 'Roboto';
+
+.title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 18px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #D4AD68;
+  margin-bottom: 50px;
+
+  mix-blend-mode: normal;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-p + span{
-    color: #222672;
-    font-weight: bold;
+
+.perfilft {
+  width: 80px;
+  height: 80px;
+  border: 3px solid #1E2044;
+  border-radius: 50%;
 }
-span + ul{
-    margin-top: 25px;
-    mix-blend-mode: normal;
-    align-items: left;
-    text-align: left;
+
+.username {
+  margin-bottom: 50px;
 }
-li{
-    display: flex;
-    margin-left: 20px;
-    margin-bottom: 18%;
-    flex-direction: row;
-    font-size: 19px;
-    cursor: pointer;
+
+
+p,
+span {
+  align-items: center;
+  text-align: center;
+  font-family: 'Roboto';
 }
-li>img{
-    width: 19px;
-    margin-right: 4px;
+
+p+span {
+  color: #222672;
+  font-weight: bold;
 }
-.perfilft{
-    width: 90px;
-    height: 90px;
-    border: 3px solid #1E2044;
-    border-radius: 50%;
-    margin: 20% auto 10px auto;
+
+span+ul {
+  mix-blend-mode: normal;
+  align-items: left;
+  text-align: left;
 }
-a{
-    text-decoration: none;
-    color: black;
+
+li {
+  display: flex;
+  flex-direction: row;
+  font-size: 19px;
+  cursor: pointer;
 }
-ul + p{
-    font-size: 14px;
-    color:gray;
+
+li>img {
+  width: 23px;
+  height: 23px;
+  margin-right: 7px;
+}
+
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+ul+p {
+  font-size: 14px;
+  color: gray;
+}
+
+
+.nav-items-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 20px;
 }
