adição da tela alterar dados

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -1,9 +1,9 @@
 <section class="oversight-page">
-  <!-- <arf-oversight-navbar class="oversight-navbar"></arf-oversight-navbar> -->
+  <arf-oversight-navbar class="oversight-navbar"></arf-oversight-navbar>
   <div class="oversight-navbar"></div>
 
   <div class="outlet">
-    <!-- <router-outlet></router-outlet> -->
-    <arf-alertas></arf-alertas>
+    <router-outlet></router-outlet>
+    <!-- <arf-alertas></arf-alertas> -->
   </div>
 </section>
