--- a/client-side/src/app/components/arf-oversight-page/arf-alterar-dados/arf-alterar-dados.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-alterar-dados/arf-alterar-dados.component.html
@@ -3,14 +3,16 @@
         <h1><img src="assets/icones/pen-to-square-solid.svg"> Alterar dados</h1>
         <div class="form">
             <div class="labels">
-                <label for="">Nova senha</label>
-                <label for="">Confirme sua nova senha</label>
-                <label for="">Nova imagem de perfil:</label>
+                <label>Nova senha</label>
+                <label>Confirme sua nova senha</label>
+                <label>Novo telefone</label>
+                <label>Nova imagem de perfil:</label>
             </div>
             <div class="inputs">
-                <input class="inpt" type="password">
-                <input class="inpt" type="password">
-                <input type="file" class="fupload form-control" >
+                <input class="inpt" [(ngModel)]="password" type="password">
+                <input class="inpt"  [(ngModel)]="confirmPassword"type="password">
+                <input type="text" [placeholder]="atualTel" [(ngModel)]="telefone">
+                <input type="file" [(ngModel)]="img" class="fupload form-control" >
             </div>
         </div>
         <span class="error">{{error}}</span>
