feat: tela de infra e tela de acessos + conexão no login

--- a/client-side/src/app/components/arf-login/arf-login.component.html
+++ b/client-side/src/app/components/arf-login/arf-login.component.html
@@ -12,7 +12,12 @@
       <input type="password" [(ngModel)]="senha">
       <label class="error">{{error}}</label>
       <button (click)="autenticar()" class="btnLogar">
-        Entrar
+        <p *ngIf="!isLoading; else spinner">
+          Entrar
+        </p>
+        <ng-template #spinner>
+          <img class="spin-icon" src="assets/imagens/spiner-login.gif" alt="">
+        </ng-template>
       </button>
       <p>Não possui uma conta? <a [routerLink]="['/cadastro']">faça seu cadastro aqui!</a></p>
     </div>
