--- a/client-side/src/app/components/arf-oversight-page/arf-acessos/arf-acessos.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-acessos/arf-acessos.component.scss
@@ -1,10 +1,12 @@
-.alertas {
+.dash-card {
   ::ng-deep {
     .arf-dash-card {
       border-radius: 0;
       box-shadow: none;
       overflow: auto;
-      padding: 2px;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
 
       .title-container {
         display: flex;
@@ -26,10 +28,26 @@
       }
     }
   }
+}
+
+.acessos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
+  overflow: overlay;
+
+  &__table-container {
+    // max-height: 80%;
+    width: 100%;
+    overflow: auto;
+  }
 
   &__table {
     text-align: center;
-    // height: 100%;
+    // height: 50%;
     font-size: 0.9rem;
     border-collapse: collapse;
     width: 100%;
@@ -39,6 +57,10 @@
       border: 1px solid #ddd;
       padding: 5px;
       letter-spacing: .5px;
+    }
+
+    td {
+      padding: 7px;
     }
   }
 
@@ -50,6 +72,7 @@
 
     th {
       color: #d4ad68;
+      padding: 5px;
     }
 
   }
@@ -77,6 +100,15 @@
           max-width: 100px;
         }
       }
+    }
+  }
+
+  &__status-container {
+    display: flex;
+    column-gap: 10px;
+
+    input {
+      margin-right: 3px;
     }
   }
 
@@ -115,19 +147,30 @@
     font-weight: 400;
   }
 
+
+  &__btn-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20%;
+    border-top: 2px solid #d4ad68;
+    border-radius: 2px;
+    background: linear-gradient(to right, #212121, #212121fd);
+    column-gap: 25px;
+  }
+
   button {
-    margin-left: 10px;
-    align-self: flex-end;
     background: #1E2044;
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     color: #fff;
-    padding: 3px 20px;
+    padding: 10px 45px;
+    font-size: .95rem;
   }
 
   button:disabled {
-    background: rgba(30, 32, 68, 0.7) !important;
+    background: rgba(93, 95, 156, 0.7) !important;
   }
-
 }
