--- a/client-side/src/app/components/arf-oversight-page/arf-infra/arf-infra.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-infra/arf-infra.component.scss
@@ -1,10 +1,12 @@
-.alertas {
+.infra {
   ::ng-deep {
     .arf-dash-card {
       border-radius: 0;
       box-shadow: none;
       overflow: auto;
-      padding: 2px;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
 
       .title-container {
         display: flex;
@@ -27,9 +29,16 @@
     }
   }
 
+
+  &__table-container {
+    height: 80%;
+    width: 100%;
+    overflow: auto;
+  }
+
   &__table {
     text-align: center;
-    // height: 100%;
+    height: 50%;
     font-size: 0.9rem;
     border-collapse: collapse;
     width: 100%;
@@ -39,6 +48,10 @@
       border: 1px solid #ddd;
       padding: 5px;
       letter-spacing: .5px;
+    }
+
+    td {
+      padding: 10px 5px;
     }
   }
 
@@ -50,6 +63,7 @@
 
     th {
       color: #d4ad68;
+      padding: 5px;
     }
 
   }
@@ -115,19 +129,31 @@
     font-weight: 400;
   }
 
+
+  &__btn-container {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 13%;
+    border-top: 2px solid #d4ad68;
+    border-radius: 2px;
+    background: linear-gradient(to right, #212121, #212121fd);
+    column-gap: 25px;
+  }
+
   button {
-    margin-left: 10px;
-    align-self: flex-end;
     background: #1E2044;
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     color: #fff;
-    padding: 3px 20px;
+    padding: 10px 45px;
+    font-size: .95rem;
   }
 
   button:disabled {
-    background: rgba(30, 32, 68, 0.7) !important;
+    background: rgba(93, 95, 156, 0.7) !important;
   }
-
 }
